--- a/css/style_min.css
+++ b/css/style_min.css
@@ -121,6 +121,11 @@ body {
   animation-duration: 1s;
   animation-fill-mode: forwards;
 }
+.carousel-inner {
+  height: 690px;
+  width: 100%;
+  box-sizing: content-box;
+}
 @keyframes expand {
   from {
     width: 0;
@@ -308,6 +313,10 @@ input[type="submit"] {
   #contact .container {
     align-items: center;
   }
+  .carousel-inner {
+    height: 552px;
+    width: 100%;
+  }
   .about-me__title {
     margin-top: 0;
     margin-bottom: 1em;
@@ -318,13 +327,6 @@ input[type="submit"] {
   }
 }
 @media all and (max-width: 1000px) {
-  .picture.left::before,
-  .picture.right::before {
-    height: 30%;
-    position: absolute;
-    z-index: -1;
-    width: 100%;
-  }
   #about,
   #contact .container,
   #services .container {
@@ -333,6 +335,10 @@ input[type="submit"] {
   .picture {
     width: 50%;
   }
+  .carousel-inner {
+    height: 460px;
+    width: 100%;
+  }
   .picture img {
     width: 300px;
     height: 300px;
@@ -340,9 +346,13 @@ input[type="submit"] {
     object-position: center;
   }
   .picture.left::before {
+    width: 100%;
+    height: 30%;
+    position: absolute;
     bottom: auto;
     top: 0;
     left: 0;
+    z-index: -1;
   }
   .about-me__title {
     text-align: center;
@@ -369,8 +379,12 @@ input[type="submit"] {
     margin-top: 1em;
   }
   .picture.right::before {
+    width: 100%;
+    height: 30%;
+    position: absolute;
     bottom: 0;
     right: 0;
+    z-index: -1;
   }
 }
 @media all and (max-width: 650px) {
@@ -391,6 +405,10 @@ input[type="submit"] {
   .picture.left::before,
   .picture.right::before {
     height: 150px;
+  }
+  .carousel-inner {
+    height: 300px;
+    width: 100%;
   }
   .picture img {
     width: 250px;
